src/test/ui/error-codes/E0404.stderr
error[E0404]: expected trait, found struct `Foo`
  --> $DIR/E0404.rs:14:6
   |
14 | impl Foo for Bar {} //~ ERROR E0404
   |      ^^^ not a trait

error: cannot continue compilation due to previous error

